--- a/web-app/style.css
+++ b/web-app/style.css
@@ -42,6 +42,18 @@
     top: 50%;
 }
 
+#hide-current-image {
+    position: absolute;
+    top: 1vh;
+    right: 1vh;
+    background: transparent;
+    height: 25px;
+    cursor: pointer;
+    visibility: hidden;
+
+    filter: drop-shadow(0px 0px 1px #FFFFFF);
+}
+
 /* ========================     */
 /* STYLE CLASSES                */
 /* ========================     */
