chore(docs): cleanup and documentation

--- a/web-app/style.css
+++ b/web-app/style.css
@@ -58,7 +58,7 @@
     bottom: 3vh;
     left: 3vh;
     color: #FFFFFF;
-    font-family: serif;
+    font-family: sans-serif;
     background: transparent;
     font-size: 30px;
     text-align: left;
