--- a/web-app/style.css
+++ b/web-app/style.css
@@ -58,7 +58,8 @@
     bottom: 3vh;
     left: 3vh;
     color: #FFFFFF;
-    font-family: sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,
+Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
     background: transparent;
     font-size: 30px;
     text-align: left;
