--- a/web-app/style.css
+++ b/web-app/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Inter';
+    src: url('font.ttf') format('truetype');
+}
+
 * {
     overflow: hidden;
     margin: 0;
@@ -58,8 +63,7 @@
     bottom: 3vh;
     left: 3vh;
     color: #FFFFFF;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,
-Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+    font-family: "Inter", serif;
     background: transparent;
     font-size: 30px;
     text-align: left;
@@ -78,7 +82,7 @@ Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 .weather-label {
     text-align: right;
     color: #FFFFFF;
-    font-family: "Roboto Medium", serif;
+    font-family: "Inter", serif;
     background: transparent;
     font-size: 30px;
     -webkit-text-stroke-width: 1px;
