--- a/web-app/style.css
+++ b/web-app/style.css
@@ -54,6 +54,7 @@
     visibility: hidden;
 
     filter: drop-shadow(0px 0px 1px #FFFFFF);
+    z-index: 2;
 }
 
 /* ========================     */
